k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viyaapp
  labels:
    app: viyaapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viyaapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: viyaapp
    spec:
      containers:
        - name: viyaapp
# Update your docker image here
          image: viyaappcr.azurecr.io/viyaapp:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          resources: {}
