k8s/base/service.yaml
 
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simpleapp
  name: simpleapp
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: simpleapp
