k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viyaapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-name: "viyaapp"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
  namespace: viyaapp
spec:
  tls:
  - hosts:
    - viyaserver.com
    secretName: tls-secret
  rules:
  - host: viyaserver.com
    http:
      paths:
      - pathType: Prefix
        path: "/viyaapp"
        backend:
          service:
            name: viyaapp
            port:
              number: 8080
